--- a/SpringBootExample/src/main/resources/templates/admin.html
+++ b/SpringBootExample/src/main/resources/templates/admin.html
@@ -3,17 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
+    <style>
+        body {
+            padding: 20px;
+        }
+    </style>
 </head>
-<body>
+  <body>
+  <nav class="navbar navbar-default" style="background-color: deepskyblue">
+      <div class="container-fluid">
+          <div class="navbar-header">
+              <span class="text-uppercase"   th:text="${username}"></span>
+              <span>   with role: </span>
+              <span  th:text="${user.getRoleSetString()}"></span>
+          </div>
+      </div>
+  </nav>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-2">
+                <div class="container-fluid">
+                    <div style="background-color: blue" th:text="${user.getRoleSetString()}"></div>
+                </div>
+            </div>
+            <div class="col-10" style="background-color: aliceblue">
+                <div class="container">
+                    <h2>Welcome ADMIN <span th:text="${username}"></span></h2>
+                    <br>
+                    <p><a href="/admin/users" class="btn btn-info" role="button">All Users</a></p>
+                    <br>
+                    <form action="/logout" method="POST">
+                        <button class="btn btn-primary">logout</button>
+                    </form>
+                </div>
+            </div>
+        </div>
 
 
-<p><a href="/admin/users">All Users</a></p>
 
-<h2>Welcome ADMIN <span th:text="${username}"></span></h2>
-
-<form action="/logout" method="POST">
-    <button>logout</button>
-</form>
-
-</body>
+    </div>
+  </body>
 </html>
