--- a/SpringBootExample/src/main/resources/templates/login.html
+++ b/SpringBootExample/src/main/resources/templates/login.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Authorization</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
+    <style>
+        body {
+            padding: 30px;
+        }
+    </style>
 </head>
 <body>
-
-
-<h2>Authorization</h2>
-<form action="/login" method="POST">
-    <input autofocus type="text" name="username" required placeholder="login">
-    <br>
-    <input type="text" name="password" required placeholder="password">
-    <br>
-    <br>
-    <input type="submit" value="Log in">
-</form>
-
-
+<div class="container">
+    <h2>Authorization</h2>
+    <form action="/login" method="POST">
+        <input autofocus type="text" name="username" required placeholder="login">
+        <br>
+        <input type="text" name="password" required placeholder="password">
+        <br>
+        <br>
+        <input type="submit" class="btn btn-info" value="Log in">
+    </form>
+</div>
 </body>
 </html>
