--- a/SpringBootExample/src/main/resources/templates/user-update.html
+++ b/SpringBootExample/src/main/resources/templates/user-update.html
@@ -1,36 +1,57 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head>
 <meta charset="UTF-8">
-<title>Create myUser</title>
+<title>Create user</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
+    <style>
+        body {
+            padding: 30px;
+        }
+    </style>
 </head>
 <body>
-<form action="#" th:action="@{/admin/user-update}" th:object="${user}" method="post">
-    <label for="id">ID</label>
-    <input readonly type="number" th:field="*{id}" id="id" placeholder="ID">
-    <br/>
-    <label for="username">username</label>
-    <input type="text" th:field="*{username}" id="username" placeholder="username">
-    <br/>
-    <label for="password">password</label>
-    <input type="text" th:field="*{password}" id="password" placeholder="Password">
-    <br/>
-    <label for="firstname">First name</label>
-    <input type="text" th:field="*{firstname}" id="firstname" placeholder="First Name">
-    <br/>
-    <label for="lastname">Last name</label>
-    <input type="text" th:field="*{lastname}" id="lastname" placeholder="Last Name">
-    <br/>
-    <select required name="role">
-        <option disabled selected value="">Choose role</option>
-        <option value="1">ROLE_USER</option>
-        <option value="2">ROLE_ADMIN</option>
-    </select><br>
-    <input type="submit" value="Update User">
-</form>
-
-<form action="/logout" method="POST">
-    <button>logout</button>
-</form>
-
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-10" style="background-color: aliceblue">
+            <div class="container">
+                <form action="#" th:action="@{/admin/user-update}" th:object="${user}" method="post">
+                    <label for="id">ID</label>
+                    <input readonly type="number" th:field="*{id}" id="id" placeholder="ID">
+                    <br/>
+                    <label for="username">username</label>
+                    <input type="text" th:field="*{username}" id="username" placeholder="username">
+                    <br/>
+                    <label for="password">password</label>
+                    <input type="text" th:field="*{password}" id="password" placeholder="Password">
+                    <br/>
+                    <label for="firstname">First name</label>
+                    <input type="text" th:field="*{firstname}" id="firstname" placeholder="First Name">
+                    <br/>
+                    <label for="lastname">Last name</label>
+                    <input type="text" th:field="*{lastname}" id="lastname" placeholder="Last Name">
+                    <br/>
+                    <select required name="role">
+                        <option disabled selected value="">Choose role</option>
+                        <option value="1">ROLE_USER</option>
+                        <option value="2">ROLE_ADMIN</option>
+                    </select>
+                    <br>
+                    <input type="submit" class="btn btn-success" value="Update User">
+                </form>
+                <br>
+                <form action="/logout" method="POST">
+                    <button class="btn btn-primary">logout</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
