--- a/SpringBootExample/src/main/resources/templates/user.html
+++ b/SpringBootExample/src/main/resources/templates/user.html
@@ -2,38 +2,70 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>MyUser</title>
+    <title>User</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
+    <style>
+        body {
+            padding: 20px;
+        }
+    </style>
 </head>
+
 <body>
-<h2>Welcome <span th:text="${username}"></span></h2>
+<nav class="navbar navbar-dark" style="background-color: deepskyblue">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <span class="text-uppercase"   th:text="${username}"></span>
+            <span>   with role: </span>
+            <span  th:text="${user.getRoleSetString()}"></span>
+        </div>
+    </div>
 
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2">
+            <div class="container-fluid">
+                <div style="background-color: blue" th:text="${user.getRoleSetString()}"></div>
+            </div>
+        </div>
+        <div class="col-10" style="background-color: aliceblue">
+            <div class="container-fluid">
+                <h2>Welcome <span th:text="${username}"></span></h2>
 
+                <table class="table table-bordered">
+                    <tr class="alert-primary">
+                        <th>ID</th>
+                        <th>Username</th>
+                        <th>Password</th>
+                        <th>Roles</th>
+                        <th>FirstName</th>
+                        <th>LastName</th>
+                    </tr>
+                    <tr>
+                        <td th:text="${user.getId()}">id</td>
+                        <td th:text="${user.getUsername()}">username</td>
+                        <td th:text="${user.getPassword()}">password</td>
+                        <td th:text="${user.getRoleSetString()}">roles</td>
+                        <td th:text="${user.getFirstname()}">first name</td>
+                        <td th:text="${user.getLastname()}">second name</td>
+                    </tr>
+                </table>
 
-<table>
-    <tr>
-        <th>ID</th>
-        <th>Username</th>
-        <th>Password</th>
-        <th>Roles</th>
-        <th>FirstName</th>
-        <th>LastName</th>
+                <form action="/logout" method="POST">
+                    <button class="btn btn-primary">logout</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
-    </tr>
-    <tr>
-        <td th:text="${user.getId()}">id</td>
-        <td th:text="${user.getUsername()}">username</td>
-        <td th:text="${user.getPassword()}">password</td>
-        <td th:text="${user.getRoleSetString()}">roles</td>
-        <td th:text="${user.getFirstname()}">first name</td>
-        <td th:text="${user.getLastname()}">second name</td>
-
-    </tr>
-</table>
-
-<form action="/logout" method="POST">
-    <button>logout</button>
-</form>
-
+</div>
 </body>
 </html>
 
