--- a/SpringBootExample/src/main/resources/templates/login.html
+++ b/SpringBootExample/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Authorization</title>
+    <title>Login page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -17,15 +17,21 @@
 </head>
 <body>
 <div class="container">
-    <h2>Authorization</h2>
-    <form action="/login" method="POST">
-        <input autofocus type="text" name="username" required placeholder="login">
-        <br>
-        <input type="text" name="password" required placeholder="password">
-        <br>
-        <br>
-        <input type="submit" class="btn btn-info" value="Log in">
-    </form>
+    <div class="row mt-1 justify-content-center">
+        <div class="col-3">
+            <h4>Please sign in</h4>
+            <form action="/login" method="POST">
+                <div class="form-group">
+                    <input class="form-control" autofocus type="text" name="username" required placeholder="login">
+                    <input class="form-control" type="text" name="password" required placeholder="password">
+                    <br>
+                </div>
+                <input type="submit" class="btn btn-primary w-100" value="Sign in">
+            </form>
+        </div>
+    </div>
+
+
 </div>
 </body>
 </html>
